Add Week8 lab and problem set files

--- a/Week8/homepage/lucy_page.html
+++ b/Week8/homepage/lucy_page.html
@@ -25,6 +25,7 @@
             <img src="cat_pics/bbcat7.jpg" class="cat-pic img-thumbnail rounded float" alt="Tiny cat.">
             <img src="cat_pics/bbcat8.jpg" class="cat-pic img-thumbnail rounded float" alt="Tiny cat.">
             <img src="cat_pics/bbcat2.jpg" class="cat-pic img-thumbnail rounded float" alt="Tiny cat.">
+            <img src="cat_pics/bbcat9.jpg" class="cat-pic img-thumbnail rounded float" alt="Tiny cat.">
         </div>
     </body>
 </html>
